# tripper

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  MongoDB.md  README.md
assets/: main.css
src/: ai.rs  components.rs  db.rs  lib.rs  main.rs  pages.rs  router.rs  server.rs  theme.rs  unsplash.rs
src/components/: common.rs  dashboard.rs  features.rs  footer.rs  hero.rs  navbar.rs  spinner.rs  testimonial.rs  toast.rs
src/components/common/: header.rs  logo.rs  server.rs
src/components/dashboard/: analytics.rs  chat.rs  fields.rs  navbar.rs  profile.rs  sidebar.rs  trips.rs
src/components/dashboard/chat/: panel.rs  sidebar.rs
src/components/dashboard/fields/: input.rs  number.rs  select.rs
src/components/dashboard/trips/: create.rs  list.rs  read.rs
src/components/features/: grid.rs  item.rs
src/components/footer/: bottom.rs  contact.rs  icon.rs  links.rs  logo.rs  support.rs
src/components/navbar/: btns.rs  links.rs
src/components/testimonial/: author.rs  card.rs  rating.rs
src/components/toast/: manager.rs  provider.rs
src/pages/: dashboard.rs  home.rs  login.rs  signup.rs  trip.rs
src/server/: auth.rs  conversation.rs
src/server/auth/: controller.rs  model.rs  response.rs
src/server/common/: response.rs
src/server/conversation/: controller.rs  model.rs  request.rs  response.rs
src/server/trip/: controller.rs  model.rs  request.rs  response.rs
