[package]
name = "tripper"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router", "html"] }
mongodb = { version = "3.1.0", optional = true }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.38", features = ["serde"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
futures-util = { version = "0.3.31" }
jsonwebtoken = { version = "9.3.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
tokio = { version = "1.41.1", optional = true }
uuid = { version = "1.11.0", optional = true }
rand = { version = "0.8.5", optional = true }
axum-extra = { version = "0.9.4", features = ["cookie"], optional = true }
rand_core = { version = "0.6.4", features = ["std"], optional = true }
anyhow = "1.0.93"
time = "0.3.36"
regex = "1.11.1"
getrandom = { version = "0.2.15", features = ["js"] }
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-regular", "font-awesome-brands", "font-awesome-solid"] }
web-sys = { version = "0.3.72", features = ["Selection", "Window"] }
aws-config = { version = "1.5.10", optional = true }
aws-sdk-bedrockruntime = { version = "1.61.0", optional = true }
aws-smithy-runtime-api = { version = "1.7.3", optional = true }
aws-smithy-types = { version = "1.2.9", optional = true }
http-api-isahc-client = { version = "0.2.2", optional = true }
unsplash-api = { version = "0.1.0", optional = true }
gloo-storage = "0.3.0"
axum = { version = "0.7.7", optional = true }
tower-http = { version = "0.6.1", features = ["cors"], optional = true }
reqwest = { version = "0.12.9", features = ["json"], optional = true }
dioxus-web = { version = "0.5.6", features = ["hydrate"] }

# Debug
dioxus-logger = "0.5.1"

[features]
default = []
server = ["dioxus/axum", "reqwest", "axum", "tower-http","unsplash-api", "http-api-isahc-client", "tokio", "mongodb", "jsonwebtoken", "argon2", "uuid", "rand", "axum-extra", "rand_core", "aws-config", "aws-sdk-bedrockruntime", "aws-smithy-runtime-api", "aws-smithy-types"]
web = ["dioxus/web"]
axum-extra = ["dep:axum-extra"]
